--- a/configs/launcher/slurm.yaml
+++ b/configs/launcher/slurm.yaml
@@ -2,18 +2,28 @@
 
 slurm:
   folder: "./slurm_logs/%j"  # Default log folder for submitit, %j is the job ID
-  nodes: 1                  # Default value, not specified in jobfile.sh
-  gpus_per_node: 1          # From --gres=gpu:a40:1
-  cpus_per_task: 16         # From --cpus-per-task=16
-  time: "3:00:00"           # From --time=3:00:00
+  nodes: 1
+  gpus_per_node: null      # From --gres=gpu:a40:1
+  gres: "gpu:a40:1"         # Specify GPU type
+  cpus_per_task: 16         # From -c 16
+  time: "00:20:00"          # From --time=03:00:00
   account: null             # Placeholder - Set your SLURM account if needed
   qos: null                 # Placeholder - Set your SLURM QOS if needed
-  partition: null           # Placeholder - Set your SLURM partition if needed
+  partition: null       # Removed - Not specified in script
+  export: NONE            # Maps to #SBATCH --export=NONE
+  setup_commands:
+    - "module load python/3.12-conda cuda cudnn" # Move to top
+    #- "unset SLURM_EXPORT_ENV"
+    - "export HTTPS_PROXY=http://proxy:80"
+    - "export WANDB_API_KEY=28996bd59f1ba2c5a8c3f2cc23d8673c327ae230"
+    - "export WANDB__SERVICE_WAIT=\"300\""
+    - "export WANDB_INIT_TIMEOUT=\"600\""
 
 # Default experiment configuration (can be overridden)
-experiment_group: "stoix_experiment" # Default name for the group of jobs
+experiment_group: "StandardJob" # From -J StandardJob
 
 experiment:
-  algorithm_exec_files: ["stoix/systems/ppo/anakin/ff_ppo.py"] # Example, replace with actual paths
-  environments: ["gymnax/CartPole-v1"]  # Example, replace with actual environments
-  seeds: [42, 123, 987]                # Example, replace with desired seeds 
+  algorithm_exec_files: ["main.py"] # Example, replace with actual paths
+  environments: ["mujoco/Ant-v4"] # Example, replace with actual environments
+  seeds: [42] # Example, replace with desired seeds
+  algorithm: ["sac"]
