--- a/configs/launcher/slurm.yaml
+++ b/configs/launcher/slurm.yaml
@@ -26,5 +26,7 @@ experiment_group: "StandardJob" # From -J StandardJob
 experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
   environments: ["mujoco/Ant-v4","mujoco/Hopper-v4","mujoco/Walker2d-v4","mujoco/Humanoid-v4"] # Example, replace with actual environments
-  seeds: [1,2,3,4,5] # Example, replace with desired seeds
-  algorithm: ["sac","td3","td3gc","sacgc"]
+  seeds: [1] # Example, replace with desired seeds
+  algorithm: ["sac"]
+  update_frequency: [1, 5, 10]
+  wandb_project: ["SAC_GC_DIFFERENT_UTD"]
