Fixed error with SAC and added UTD_frequency parameter

--- a/configs/launcher/slurm_julia2.yaml
+++ b/configs/launcher/slurm_julia2.yaml
@@ -25,6 +25,6 @@ experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
   environments: ["mujoco/Ant-v4", "mujoco/Hopper-v4", "mujoco/Walker2d-v4", "mujoco/Humanoid-v4"] # Example, replace with actual environments
   seeds: [1,2,3,4,5] # Example, replace with desired seeds
-  algorithm: ["td3gc","sacgc"]
+  algorithm: ["sac","sacgc"]
   update_frequency: [1, 5, 10]
   wandb_project: ["SAC_GC_DIFFERENT_UTD"]
