--- a/configs/algorithm/crossq.yaml
+++ b/configs/algorithm/crossq.yaml
@@ -4,12 +4,19 @@ agent_name: CrossQ # Used by main.py to select the agent class
 actor_lr: 3e-4
 critic_lr: 3e-4
 temp_lr: 3e-4
-hidden_dims: [256, 256]
+hidden_dims: [1024, 1024]
 discount: 0.99
 backup_entropy: True
 init_temperature: 1.0
 policy_log_std_min: -10.0 # Provide all fields expected by SACConfig
 policy_log_std_max: 2.0
-policy_final_fc_init_scale: 1.0
-target_entropy_multiplier: 1.0
+policy_final_fc_init_scale: 0.01
+target_entropy_multiplier: 0.5
 max_action: 1.0
+
+# CrossQ specific parameters
+use_batch_norm: True  # Disable batch norm for debugging
+batch_norm_momentum: 0.99
+renorm_warmup_steps: 100000
+n_critics: 2
+policy_delay: 3
