--- a/configs/algorithm/crossq3.yaml
+++ b/configs/algorithm/crossq3.yaml
@@ -1,12 +1,13 @@
-agent_name: TD3
-actor_lr: 3e-4
-critic_lr: 3e-4
-hidden_dims: [256, 256] # Example hidden layer dimensions
+agent_name: CrossQ3
+actor_lr: 1e-3
+critic_lr: 1e-3
+hidden_dims: [1024, 1024] # Example hidden layer dimensions
 discount: 0.99
-tau: 0.005
+#tau: 0.005
 policy_noise: 0.2       # TD3 specific: Noise added to target policy actions
 noise_clip: 0.5         # TD3 specific: Limit for target policy noise
 policy_delay: 2     # TD3 specific: Frequency of delayed policy updates
 exploration_noise: 0.1  # TD3 specific: Stddev for Gaussian exploration noise added to actions
 max_action: 1.0
-final_fc_init_scale: 1.0  # Added for actor network initialization
+final_fc_init_scale: 1.0
+beta1: 0.5
