--- a/configs/algorithm/td3gc.yaml
+++ b/configs/algorithm/td3gc.yaml
@@ -1,4 +1,3 @@
-
 agent_name: TD3GC
 actor_lr: 3e-4
 critic_lr: 3e-4
@@ -7,9 +6,9 @@ discount: 0.99
 tau: 0.005
 policy_noise: 0.2       # TD3 specific: Noise added to target policy actions
 noise_clip: 0.5         # TD3 specific: Limit for target policy noise
-policy_frequency: 2    # TD3 specific: Frequency of delayed policy updates
+policy_delay: 2    # TD3 specific: Frequency of delayed policy updates
 exploration_noise: 0.1  # TD3 specific: Stddev for Gaussian exploration noise added to actions
 max_action: 1.0
 gamma_critic_lr: 3e-4
 target_gamma_critic_update_period: 1
-final_fc_init_scale: 1.0
+final_fc_init_scale: 1.0  # Added for actor network initialization
