--- a/configs/launcher/slurm.yaml
+++ b/configs/launcher/slurm.yaml
@@ -6,27 +6,34 @@ slurm:
   gpus_per_node: null      # From --gres=gpu:a40:1
   gres: "gpu:a40:1"         # Specify GPU type
   cpus_per_task: 16         # From -c 16
-  time: "00:20:00"          # From --time=03:00:00
+  time: "06:00:00"          # From --time=03:00:00
   account: null             # Placeholder - Set your SLURM account if needed
   qos: null                 # Placeholder - Set your SLURM QOS if needed
   partition: null       # Removed - Not specified in script
   export: "ALL"            # Maps to #SBATCH --export=NONE
   setup_commands:
-    - "module load python/3.12-conda cuda cudnn" # Move to top
-    #- "unset SLURM_EXPORT_ENV"
+    - "nvidia-smi"
+    - "which python"
+    - "python --version"
     - "export HTTPS_PROXY=http://proxy:80"
     - "export WANDB_API_KEY=28996bd59f1ba2c5a8c3f2cc23d8673c327ae230"
-    - "export WANDB__SERVICE_WAIT=\"300\""
-    - "export WANDB_INIT_TIMEOUT=\"600\""
-    - "printenv > before_python_env.txt"
+    - "export WANDB__SERVICE_WAIT=300"
+    - "export WANDB_INIT_TIMEOUT=600"
+    - "printenv | grep -E '(PROXY|WANDB|MODULE)' > debug_env.txt"
+    - "echo 'Setup completed successfully'"
 
 # Default experiment configuration (can be overridden)
 experiment_group: "StandardJob" # From -J StandardJob
 
 experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
-  environments: ["mujoco/Ant-v4","mujoco/Hopper-v4","mujoco/Walker2d-v4","mujoco/Humanoid-v4"] # Example, replace with actual environments
-  seeds: [1] # Example, replace with desired seeds
-  algorithm: ["sac"]
-  update_frequency: [1, 5, 10]
-  wandb_project: ["SAC_GC_DIFFERENT_UTD"]
+  environments: ["mujoco/HalfCheetah-v4","mujoco/Ant-v4","mujoco/Hopper-v4","mujoco/Walker2d-v4","mujoco/Humanoid-v4"] # Example, replace with actual environments
+  seeds: [1,2,3,4,5] # Example, replace with desired seeds
+  algorithm: ["td3","td3gc"]
+  
+  # environments: ["mujoco/HalfCheetah-v4"]
+  # seeds: [1]
+  # algorithm: ["td3"]
+  
+  update_frequency: [1]
+  wandb_project: ["TD3_TD3GC"]
