--- a/configs/launcher/slurm.yaml
+++ b/configs/launcher/slurm.yaml
@@ -29,11 +29,11 @@ experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
   environments: ["mujoco/HalfCheetah-v4","mujoco/Ant-v4","mujoco/Hopper-v4","mujoco/Walker2d-v4","mujoco/Humanoid-v4"] # Example, replace with actual environments
   seeds: [1,2,3,4,5] # Example, replace with desired seeds
-  algorithm: ["td3","td3gc"]
+  algorithm: ["sac","sacgc"]
   
   # environments: ["mujoco/HalfCheetah-v4"]
   # seeds: [1]
   # algorithm: ["td3"]
   
   update_frequency: [1]
-  wandb_project: ["TD3_TD3GC"]
+  wandb_project: ["SAC_SACGC"]
