--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 *$py.class
 *.so
 .Python
+minari*/
 build/
 develop-eggs/
 dist/
@@ -32,7 +33,7 @@ venv/
 env/
 ENV/
 .env
-.venv
+.venv*
 env.bak/
 venv.bak/
 
