--- a/configs/launcher/slurm_julia2.yaml
+++ b/configs/launcher/slurm_julia2.yaml
@@ -25,6 +25,7 @@ experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
   environments: ["mujoco/Ant-v4", "mujoco/Hopper-v4", "mujoco/Walker2d-v4", "mujoco/Humanoid-v4"] # Example, replace with actual environments
   seeds: [1,2,3,4,5] # Example, replace with desired seeds
-  algorithm: ["sac","sacgc"]
-  update_frequency: [1, 5, 10]
-  wandb_project: ["SAC_GC_DIFFERENT_UTD"]
+  algorithm: ["td3","td3gc"]
+  update_frequency: [1]
+  wandb_project: ["TD3_GC_DISCOUNT"]
+  discount_grad: [True, False]
