--- a/configs/launcher/slurm.yaml
+++ b/configs/launcher/slurm.yaml
@@ -27,13 +27,9 @@ experiment_group: "StandardJob" # From -J StandardJob
 
 experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
-  environments: ["mujoco/HalfCheetah-v4","mujoco/Ant-v4","mujoco/Hopper-v4","mujoco/Walker2d-v4","mujoco/Humanoid-v4"] # Example, replace with actual environments
-  seeds: [1,2,3,4,5] # Example, replace with desired seeds
-  algorithm: ["sac","sacgc"]
-  
-  # environments: ["mujoco/HalfCheetah-v4"]
-  # seeds: [1]
-  # algorithm: ["td3"]
-  
-  update_frequency: [1]
-  wandb_project: ["SAC_SACGC"]
+  environments: ["mujoco/HalfCheetah-v5","mujoco/Ant-v5","mujoco/Hopper-v5","mujoco/Walker2d-v5"] # Example, replace with actual environments
+  seeds: [100,101,102,103,104,105] # Example, replace with desired seeds
+  algorithm: ["td3gc"]
+  policy_delay: [2,5,10]
+  wandb_project: ["TD3_GC_TUNING"]
+  discount_grad: [False]
