--- a/configs/algorithm/td3gc.yaml
+++ b/configs/algorithm/td3gc.yaml
@@ -12,3 +12,4 @@ max_action: 1.0
 gamma_critic_lr: 3e-4
 target_gamma_critic_update_period: 1
 final_fc_init_scale: 1.0  # Added for actor network initialization
+use_layer_norm: False
