--- a/configs/algorithm/td3gcbc.yaml
+++ b/configs/algorithm/td3gcbc.yaml
@@ -13,11 +13,12 @@ max_action: 1.0
 gamma_critic_lr: 3e-4
 target_gamma_critic_update_period: 1
 final_fc_init_scale: 1.0
+use_layer_norm: true
 
 # TD3BC specific
 alpha: 2.5
 use_bc_loss: true
-n_jitted_updates: 8
+n_jitted_updates: 2
 batch_size: 256
 max_steps: 1000000
 data_size: 1000000
