--- a/configs/launcher/slurm_julia2.yaml
+++ b/configs/launcher/slurm_julia2.yaml
@@ -23,9 +23,9 @@ experiment_group: "StandardJob" # From -J StandardJob
 
 experiment:
   algorithm_exec_files: ["main.py"] # Example, replace with actual paths
-  environments: ["mujoco/Ant-v5", "mujoco/Hopper-v5", "mujoco/Walker2d-v5","mujoco/HalfCheetah-v5"] # Example, replace with actual environments
+  environments: ["mujoco/Swimmer-v5","mujoco/Ant-v5", "mujoco/Hopper-v5", "mujoco/Walker2d-v5","mujoco/HalfCheetah-v5","mujoco/Humanoid-v5"] # Example, replace with actual environments
   seeds: [100,101,102,103,104] # Example, replace with desired seeds
   algorithm: ["td3","td3gc"]
   policy_delay: [2]
-  wandb_project: ["TD3_GC_DISC"]
+  wandb_project: ["TD3_GC_LASTHOPE2"]
   discount_grad: [True]
