--- a/configs/algorithm/td3gc.yaml
+++ b/configs/algorithm/td3gc.yaml
@@ -1,7 +1,7 @@
 agent_name: TD3GC
 actor_lr: 3e-4
 critic_lr: 3e-4
-hidden_dims: [64, 64] # Example hidden layer dimensions
+hidden_dims: [256, 256] # Example hidden layer dimensions
 discount: 0.99
 tau: 0.005
 policy_noise: 0.2       # TD3 specific: Noise added to target policy actions
@@ -12,3 +12,4 @@ max_action: 1.0
 gamma_critic_lr: 3e-4
 target_gamma_critic_update_period: 1
 use_layer_norm: False
+share_critic_backbone: True
